--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,6 +1,6 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Theme.OkDoc" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
+    <style name="Theme.OkDoc" parent="Theme.MaterialComponents.Light">
         <!-- Primary brand color. -->
         <item name="colorPrimary">@color/mandarin</item>
         <item name="colorPrimaryVariant">@color/vermilion</item>
