--- a/app/src/main/res/layout-v31/activity_login.xml
+++ b/app/src/main/res/layout-v31/activity_login.xml
@@ -55,7 +55,7 @@
         android:id="@+id/doctors_image"
         android:layout_width="301dp"
         android:layout_height="217dp"
-        android:background="@drawable/ic_undraw_medicine_b1ol"
+        android:background="@drawable/ic_login"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -100,7 +100,7 @@
         style="@style/amka_field"
         android:layout_width="310dp"
         android:layout_height="52dp"
-        android:background="@drawable/edit_text_border"
+        android:background="@drawable/light_gray_border"
         android:ems="10"
         android:hint="@string/amka_field_message"
         android:inputType="textPersonName"
