--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -40,6 +40,14 @@
         <item name="android:textSize">20sp</item>
         <item name="android:textColor">@color/white</item>
         <item name="android:background">@color/mandarin</item>
-        <item name="android:letterSpacing">0</item>
+        <item name="android:letterSpacing">0.05</item>
+    </style>
+
+    <style name="profile_full_name">
+        <item name="android:fontFamily">@font/poppins</item>
+        <item name="android:textSize">20sp</item>
+        <item name="android:textColor">@color/white</item>
+        <item name="android:background">@color/mandarin</item>
+        <item name="android:letterSpacing">0.05</item>
     </style>
 </resources>
