--- a/app/src/main/res/layout/profile_fragment.xml
+++ b/app/src/main/res/layout/profile_fragment.xml
@@ -62,7 +62,7 @@
                     style="@style/profile_full_name"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:background="@drawable/white_border"
+                    android:background="@color/white"
                     android:paddingHorizontal="18dp"
                     android:text="@string/profile_full_name"
                     android:textAlignment="center"
@@ -74,7 +74,7 @@
                     android:id="@+id/fullNameDescription"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:background="@drawable/white_border"
+                    android:background="@color/white"
                     android:paddingHorizontal="18dp"
                     android:layout_marginBottom="8dp"
                     android:text="@string/profile_full_name"
