--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -50,4 +50,10 @@
         <item name="android:background">@color/mandarin</item>
         <item name="android:letterSpacing">0.05</item>
     </style>
+
+    <style name="prescription_title">
+        <item name="android:fontFamily">@font/poppins</item>
+        <item name="android:letterSpacing">0.05</item>
+    </style>
+
 </resources>
