--- a/app/src/main/res/layout/prescription_fragment.xml
+++ b/app/src/main/res/layout/prescription_fragment.xml
@@ -31,15 +31,16 @@
         android:layout_width="43dp"
         android:layout_height="81dp"
         android:layout_marginStart="22dp"
-        android:layout_marginEnd="10dp"
         android:layout_marginTop="55dp"
+        android:layout_marginEnd="10dp"
         android:background="@drawable/mandarin_border_12dp"
         android:drawableStart="@drawable/ic_back_arrow"
         android:paddingHorizontal="13dp"
         app:layout_constraintEnd_toStartOf="@+id/buttonPastDiagnoses"
         app:layout_constraintHorizontal_bias="0.595"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />
 
 
     <View
