--- a/app/src/main/res/layout/item_prescription.xml
+++ b/app/src/main/res/layout/item_prescription.xml
@@ -13,7 +13,7 @@
             android:layout_marginHorizontal="20dp"
             android:layout_marginVertical="10dp"
             android:background="@drawable/white_border"
-            android:clickable="true"
+            android:clickable="false"
             android:gravity="bottom"
             android:orientation="vertical"
             app:layout_constraintBottom_toBottomOf="parent"
