--- a/app/src/main/res/layout/home_fragment.xml
+++ b/app/src/main/res/layout/home_fragment.xml
@@ -58,8 +58,8 @@
             <Button
                 android:id="@+id/buttonPastDiagnoses"
                 android:layout_width="310dp"
-                android:layout_height="100dp"
-                android:layout_marginVertical="12dp"
+                android:layout_height="90dp"
+                android:layout_marginVertical="6dp"
                 android:layout_marginHorizontal="20dp"
                 android:background="@drawable/light_gray_border"
                 android:drawableRight="@drawable/ic_past_diagnoses"
@@ -74,8 +74,8 @@
             <Button
                 android:id="@+id/buttonPrescriptions"
                 android:layout_width="310dp"
-                android:layout_height="100dp"
-                android:layout_marginVertical="12dp"
+                android:layout_height="90dp"
+                android:layout_marginVertical="6dp"
                 android:layout_marginHorizontal="20dp"
                 android:background="@drawable/light_gray_border"
                 android:drawableRight="@drawable/ic_prescriptions_list"
@@ -88,10 +88,26 @@
             </Button>
 
             <Button
+                android:id="@+id/buttonViewAppointments"
+                android:layout_width="310dp"
+                android:layout_height="90dp"
+                android:layout_marginVertical="6dp"
+                android:layout_marginHorizontal="20dp"
+                android:background="@drawable/light_gray_border"
+                android:drawableRight="@drawable/ic_booking"
+                android:padding="20dp"
+                android:text="@string/view_appointments_button"
+                android:textColor="@color/rich_black_80"
+                android:textSize="20sp"
+                android:textAlignment="viewStart"
+                android:textAllCaps="false" >
+            </Button>
+
+            <Button
                 android:id="@+id/buttonScheduleAppointment"
                 android:layout_width="310dp"
-                android:layout_height="100dp"
-                android:layout_marginVertical="12dp"
+                android:layout_height="90dp"
+                android:layout_marginVertical="6dp"
                 android:layout_marginHorizontal="20dp"
                 android:background="@drawable/light_gray_border"
                 android:drawableRight="@drawable/ic_schedule_appointment"
