add diagnoses list fragment, diagnoses adapter and navigation

--- a/app/src/main/res/navigation/bottom_navigation.xml
+++ b/app/src/main/res/navigation/bottom_navigation.xml
@@ -35,4 +35,16 @@
         android:label="Prescriptions List"
         tools:layout="@layout/prescriptions_list_fragment" />
 
+    <fragment
+        android:id="@+id/navigation_diagnoses_list"
+        android:name="com.devsoncall.okdoc.fragments.DiagnosesListFragment"
+        android:label="Diagnoses List"
+        tools:layout="@layout/diagnoses_list_fragment" />
+
+<!--    <fragment-->
+<!--        android:id="@+id/navigation_diagnosis"-->
+<!--        android:name="com.devsoncall.okdoc.fragments.DiagnosisFragment"-->
+<!--        android:label="Diagnosis"-->
+<!--        tools:layout="@layout/diagnosis_fragment" />-->
+
 </navigation>
