fix round borders in item_prescription and item_diagnosis

--- a/app/src/main/res/layout/item_diagnosis.xml
+++ b/app/src/main/res/layout/item_diagnosis.xml
@@ -28,9 +28,9 @@
             style="@style/date"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:background="@color/white"
+            android:background="@drawable/white_border"
             android:paddingHorizontal="18dp"
-            android:paddingTop="5dp"
+            android:paddingTop="2dp"
             android:textAlignment="center"
             android:textColor="@color/rich_black_90"
             android:textSize="16sp"
@@ -42,7 +42,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginBottom="8dp"
-            android:background="@color/white"
+            android:background="@drawable/white_border"
             android:paddingHorizontal="18dp"
             android:text="@string/diagnosis"
             android:textAlignment="center" />
