--- a/app/src/main/res/layout/prescription_fragment.xml
+++ b/app/src/main/res/layout/prescription_fragment.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -11,8 +10,8 @@
         android:id="@+id/buttonPastDiagnoses"
         android:layout_width="310dp"
         android:layout_height="100dp"
-        android:layout_marginTop="36dp"
         android:layout_marginStart="10dp"
+        android:layout_marginTop="36dp"
         android:layout_marginEnd="22dp"
         android:background="@drawable/mandarin_border_12dp"
         android:drawableEnd="@drawable/ic_prescription"
@@ -78,7 +77,7 @@
         android:id="@+id/textViewAssignedMedication"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginHorizontal="60dp"
+        android:layout_marginHorizontal="20dp"
         android:layout_marginTop="40dp"
         android:text="@string/assigned_medication"
         android:textAlignment="center"
@@ -86,7 +85,6 @@
         android:textColor="@color/rich_black_80"
         android:textSize="18sp"
         android:textStyle="bold"
-        app:layout_constraintEnd_toEndOf="@+id/LinearLayoutPrescription"
         app:layout_constraintStart_toStartOf="@+id/LinearLayoutPrescription"
         app:layout_constraintTop_toBottomOf="@+id/fullNameDescription" />
 
@@ -130,18 +128,27 @@
         app:layout_constraintStart_toStartOf="@+id/LinearLayoutPrescription"
         app:layout_constraintTop_toBottomOf="@+id/textViewDoctor" />
 
+    <ImageButton
+        android:id="@+id/imageButtonShare"
+        android:layout_width="48dp"
+        android:layout_height="48dp"
+        android:layout_marginEnd="8dp"
+        android:background="@drawable/mandarin_border_12dp"
+        android:src="@drawable/ic_share"
+        app:layout_constraintEnd_toStartOf="@+id/buttonDiagnosis"
+        app:layout_constraintTop_toBottomOf="@+id/textViewTitle" />
+
     <Button
         android:id="@+id/buttonDiagnosis"
         android:layout_width="90dp"
         android:layout_height="wrap_content"
+        android:layout_marginEnd="8dp"
         android:background="@drawable/mandarin_border_12dp"
         android:text="@string/diagnosis"
         android:textAllCaps="false"
         android:textColor="@color/rich_black_80"
         android:textSize="14sp"
-        android:layout_marginStart="110dp"
         app:layout_constraintEnd_toEndOf="@+id/LinearLayoutPrescription"
-        app:layout_constraintStart_toEndOf="@+id/textViewDoctor"
         app:layout_constraintTop_toBottomOf="@+id/textViewTitle" />
 
 
