add feat-hospitals for appointments UI

--- a/app/src/main/res/navigation/bottom_navigation.xml
+++ b/app/src/main/res/navigation/bottom_navigation.xml
@@ -47,4 +47,10 @@
 <!--        android:label="Diagnosis"-->
 <!--        tools:layout="@layout/diagnosis_fragment" />-->
 
+    <fragment
+        android:id="@+id/navigation_hospitals_list"
+        android:name="com.devsoncall.okdoc.fragments.HospitalListFragment"
+        android:label="Hospitals List"
+        tools:layout="@layout/hospital_list_fragment" />
+
 </navigation>
