--- a/app/src/main/res/navigation/bottom_navigation.xml
+++ b/app/src/main/res/navigation/bottom_navigation.xml
@@ -41,10 +41,17 @@
         android:label="Diagnoses List"
         tools:layout="@layout/diagnoses_list_fragment" />
 
-<!--    <fragment-->
-<!--        android:id="@+id/navigation_diagnosis"-->
-<!--        android:name="com.devsoncall.okdoc.fragments.DiagnosisFragment"-->
-<!--        android:label="Diagnosis"-->
-<!--        tools:layout="@layout/diagnosis_fragment" />-->
+    <!--    <fragment-->
+    <!--        android:id="@+id/navigation_diagnosis"-->
+    <!--        android:name="com.devsoncall.okdoc.fragments.DiagnosisFragment"-->
+    <!--        android:label="Diagnosis"-->
+    <!--        tools:layout="@layout/diagnosis_fragment" />-->
+
+    <fragment
+        android:id="@+id/navigation_hospital_list"
+        android:name="com.devsoncall.okdoc.fragments.HospitalListFragment"
+        android:label="Hospitals List"
+        tools:layout="@layout/hospital_list_fragment" />
+
 
 </navigation>
