add calendar ui screen

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,6 +8,7 @@
     <color name="maximum_blue_45">#735EB1BF</color>
     <color name="light_cyan">#CDEDF6</color>
     <color name="mandarin">#EF7B45</color>
+    <color name="mandarin_80">#CCEF7B45</color>
     <color name="mandarin_22">#38EF7B45</color>
     <color name="vermilion">#D84727</color>
     <color name="light_gray">#E5E5E5</color>
