--- a/app/src/main/res/navigation/bottom_navigation.xml
+++ b/app/src/main/res/navigation/bottom_navigation.xml
@@ -76,11 +76,17 @@
         android:name="com.devsoncall.okdoc.fragments.DoctorsFragment"
         android:label="Doctor List"
         tools:layout="@layout/doctors_fragment" />
+
     <fragment
         android:id="@+id/navigation_diagnosis"
         android:name="com.devsoncall.okdoc.fragments.DiagnosisFragment"
         android:label="diagnosis_fragment"
         tools:layout="@layout/diagnosis_fragment" />
+    <fragment
+        android:id="@+id/navigation_calendar"
+        android:name="com.devsoncall.okdoc.fragments.CalendarFragment"
+        android:label="calendar_fragment"
+        tools:layout="@layout/calendar_fragment" />
 
 
 </navigation>
