created UI for feat-hours-screen

--- a/app/src/main/res/layout/home_fragment.xml
+++ b/app/src/main/res/layout/home_fragment.xml
@@ -63,7 +63,8 @@
                 android:layout_marginHorizontal="20dp"
                 android:background="@drawable/light_gray_border"
                 android:drawableRight="@drawable/ic_past_diagnoses"
-                android:padding="20dp"
+                android:paddingHorizontal="20dp"
+                android:paddingVertical="5dp"
                 android:text="@string/past_diagnoses_button"
                 android:textColor="@color/rich_black_80"
                 android:textSize="20sp"
@@ -95,7 +96,8 @@
                 android:layout_marginHorizontal="20dp"
                 android:background="@drawable/light_gray_border"
                 android:drawableRight="@drawable/ic_booking"
-                android:padding="20dp"
+                android:paddingHorizontal="15dp"
+                android:paddingVertical="5dp"
                 android:text="@string/view_appointments_button"
                 android:textColor="@color/rich_black_80"
                 android:textSize="20sp"
@@ -111,7 +113,8 @@
                 android:layout_marginHorizontal="20dp"
                 android:background="@drawable/light_gray_border"
                 android:drawableRight="@drawable/ic_schedule_appointment"
-                android:padding="20dp"
+                android:paddingHorizontal="20dp"
+                android:paddingVertical="5dp"
                 android:text="@string/schedule_appointment_button"
                 android:textColor="@color/rich_black_80"
                 android:textSize="20sp"
